Aggiornamento 1 (da migliorare)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,32 +1,23 @@
 spring.application.name=report
 server.port=8081
 
-# Alfresco Content Services Configuration
+# Configurazione Alfresco (da adattare se necessario)
+# Configurazione Alfresco (Necessaria per lo starter)
 content.service.url=http://localhost:8080
 content.service.security.basicAuth.username=admin
 content.service.security.basicAuth.password=admin
 
-# MongoDB Configuration
-spring.data.mongodb.uri=mongodb://localhost:27017/alfresco_events
+# Configurazione Database PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+spring.datasource.username=postgres
+spring.datasource.password=reindex123
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Actuator Configuration - esponi gli endpoint per le metriche
-management.endpoints.web.exposure.include=health,info,metrics,prometheus
-management.endpoint.metrics.enabled=true
-management.endpoint.prometheus.enabled=true
-management.metrics.export.prometheus.enabled=true
+# Configurazione JPA / Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+# spring.jpa.properties.hibernate.format_sql=true
 
-# Prometheus Configuration
-management.metrics.export.prometheus.step=60s
-
-# Disabilita sicurezza per gli endpoint Actuator
-management.security.enabled=false
-
-# Disabilita auto-configurazione sicurezza Actuator
-spring.autoconfigure.exclude=org.springframework.boot.actuate.autoconfigure.security.servlet.ManagementWebSecurityAutoConfiguration
-
-# Scheduler Configuration - NodeId del nodo Alfresco da monitorare
-# Sostituisci con l'UUID del tuo nodo Alfresco
+# Configurazione Scheduler
 scheduler.node-id=a7435072-fc52-4716-9e31-788b20d4db38
-
-# Logging configuration
-logging.level.com.reindex.report=INFO
