--- a/pom.xml
+++ b/pom.xml
@@ -60,19 +60,18 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- MongoDB -->
+		<!-- PostgreSQL & JPA -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-
-		<!-- Micrometer Prometheus per le metriche -->
 		<dependency>
-			<groupId>io.micrometer</groupId>
-			<artifactId>micrometer-registry-prometheus</artifactId>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 
-		<!-- Actuator per esporre le metriche -->
+		<!-- Actuator (rimane utile per health check) -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
